# com.robypomper.events.python

./: .gitignore  CHANGELOG.md  PROJECT.md  README.md  README_pypi.md  ROADMAP.md  TODOs.md  pyproject.toml
examples/: events_register_methods.py  events_with_decorators.py
scripts/: clean.sh  test.sh
src/rp/events/: __init__.py  events.py
tests/rp_events/: test_events.py
